@@ -83,7 +83,7 @@ QScrollBar::sub-page:vertical {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-217</y>
         <width>837</width>
         <height>900</height>
        </rect>
